I made a refactored for more readerbility and cleaniness of the code